--- a/JQueryTraining/css/style.css
+++ b/JQueryTraining/css/style.css
@@ -99,4 +99,44 @@ header {
   background: #000;
   opacity: 0.6;
 }
+
+.modal-open {
+  width: 120px;
+  height: 40px;
+}
+
+.modal-area {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
+
+.modal-bg {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 60%;
+  height: auto;
+  text-align: center;
+  background: #fff;
+}
+
+.modal-cancel {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  cursor: pointer;
+}
 /*# sourceMappingURL=style.css.map */
