--- a/JQueryTraining/css/style.scss
+++ b/JQueryTraining/css/style.scss
@@ -91,3 +91,43 @@ header {
   background: #000;
   opacity: 0.6;
 }
+
+// モーダルを開くボタン
+.modal-open {
+  width: 120px;
+  height: 40px;
+}
+// モーダル全体
+.modal-area {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
+// モーダル外の背景
+.modal-bg {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(#000, 0.4);
+}
+// モーダルの内容
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: auto;
+  text-align: center;
+  background: #fff;
+}
+// モーダルを閉じるボタン
+.modal-cancel {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  cursor: pointer;
+}
