--- a/JQueryTraining/css/style.scss
+++ b/JQueryTraining/css/style.scss
@@ -131,3 +131,42 @@ header {
   right: 0;
   cursor: pointer;
 }
+// タブ全体
+.tab-area {
+  width: 80%;
+  margin: 0 auto;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+}
+.tab-menu-block {
+  display: flex;
+  justify-content: space-between;
+}
+.tab-menu {
+  width: 100%;
+}
+.tab-trigger {
+  display: inline-block;
+  width: 100%;
+  padding: 10px 0;
+  box-sizing: border-box;
+  text-align: center;
+  color: #fff;
+  background: #666;
+  &.active {
+    background: #000;
+  }
+}
+.tab-content-area {
+  border: 1px solid #000;
+}
+.tab-content {
+  display: none;
+  text-align: center;
+  &.active {
+    display: block;
+  }
+}
