--- a/JQueryTraining/css/style.css
+++ b/JQueryTraining/css/style.css
@@ -191,4 +191,151 @@ ul {
 .tab-content.active {
   display: block;
 }
+
+.accordion-area {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.accordion-area .qa-title {
+  position: relative;
+  padding: 8px;
+  border-bottom: solid 1px #222;
+  cursor: pointer;
+}
+
+.accordion-area .qa-title::after {
+  position: absolute;
+  top: 50%;
+  right: 8px;
+  display: block;
+  content: '';
+  width: 7px;
+  height: 7px;
+  border-top: solid 1px #222;
+  border-right: solid 1px #222;
+  -webkit-transform: translate(0, -50%) rotate(135deg);
+          transform: translate(0, -50%) rotate(135deg);
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+
+.accordion-area .qa-title.active::after {
+  -webkit-transform: translate(0, -50%) rotate(-45deg);
+          transform: translate(0, -50%) rotate(-45deg);
+}
+
+.accordion-area .qa-text {
+  display: none;
+  padding: 8px;
+}
+
+#slider-container {
+  background-color: #ddd;
+  padding: 50px 0;
+}
+
+#slider-container #slider {
+  width: 160px;
+  height: 100px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+#slider-container #slider li {
+  background-color: #666;
+}
+
+#slider-container #slider li span {
+  display: block;
+  width: 100%;
+  line-height: 100px;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+}
+
+.content-area {
+  text-align: center;
+}
+
+.loading-area {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.6);
+  z-index: 99;
+}
+
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 10px solid rgba(0, 0, 0, 0.2);
+  border-left: 10px solid #000;
+  border-radius: 50%;
+  -webkit-animation: loadingAnimation 1s infinite linear;
+          animation: loadingAnimation 1s infinite linear;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 100;
+}
+
+@-webkit-keyframes loadingAnimation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loadingAnimation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.loaded {
+  display: none;
+}
+
+#goal {
+  margin-top: 10000px;
+}
+
+#fas-area {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+#fas-area .fas {
+  color: black;
+}
+
+#fas-area .fas:hover {
+  cursor: pointer;
+}
+
+.block {
+  width: 100px;
+  height: 100px;
+  margin: 750px auto;
+  color: white;
+  text-align: center;
+  background-color: blue;
+}
 /*# sourceMappingURL=style.css.map */
