--- a/JQueryTraining/css/style.scss
+++ b/JQueryTraining/css/style.scss
@@ -131,7 +131,7 @@ header {
   right: 0;
   cursor: pointer;
 }
-// タブ全体
+// タブ
 .tab-area {
   width: 80%;
   margin: 0 auto;
@@ -169,4 +169,125 @@ ul {
   &.active {
     display: block;
   }
+}
+// アコーディオンメニュー
+.accordion-area {
+  width: 80%;
+  margin: 0 auto;
+  .qa-title {
+    position: relative;
+    padding: 8px;
+    border-bottom: solid 1px #222;
+    cursor: pointer;
+    &::after {
+      position: absolute;
+      top: 50%;
+      right: 8px;
+      display: block;
+      content: '';
+      width: 7px;
+      height: 7px;
+      border: {
+        top: solid 1px #222;
+        right: solid 1px #222;
+      }
+      transform: translate(0, -50%) rotate(135deg);
+      transform-origin: center;
+    }
+    &.active::after {
+      transform: translate(0, -50%) rotate(-45deg);
+    }
+  }
+  .qa-text {
+    display: none;
+    padding: 8px;
+  }
+}
+// スライダー
+#slider-container {
+  background-color: #ddd;
+  padding: 50px 0;
+  #slider {
+    width: 160px;
+    height: 100px;
+    margin: 0 auto;
+    padding: 0;
+    li {
+      background-color: #666;
+      span {
+        display: block;
+        width: 100%;
+        line-height: 100px;
+        font-size: 20px;
+        color: #fff;
+        text-align: center;
+      }
+    }
+  }
+}
+// ローディングエリア
+.content-area {
+  text-align: center;
+}
+.loading-area {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.6);
+  z-index: 99;
+}
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 10px solid rgba(0, 0, 0, 0.2);
+  border: {
+    left: 10px solid #000;
+    radius: 50%;
+  }
+  animation: loadingAnimation 1s infinite linear;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  z-index: 100;
+}
+@keyframes loadingAnimation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loaded {
+  display: none;
+}
+// スムーススクロール
+#goal {
+  margin-top: 10000px;
+}
+// トップへ戻る
+#fas-area {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  .fas {
+    color: black;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+// スクロールアニメーション
+.block {
+  width: 100px;
+  height: 100px;
+  margin: 750px auto;
+  color: white;
+  text-align: center;
+  background-color: blue;
 }
