--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -1,4 +1,246 @@
 html {
   font-family: 'YuMincho', 'Yu Mincho', serif;
+  font-size: 10px;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.pc {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .pc {
+    display: block;
+  }
+}
+
+.no-pc {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .no-pc {
+    display: none;
+  }
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 1;
+}
+
+header #site-title {
+  color: #fff;
+  margin-top: 12px;
+  font-size: 2rem;
+  line-height: 1.65;
+}
+
+@media screen and (min-width: 1080px) {
+  header #site-title {
+    margin-top: 24px;
+  }
+}
+
+.header-wrapper {
+  padding-left: 20px;
+}
+
+@media screen and (min-width: 600px) {
+  .header-wrapper {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .header-wrapper {
+    padding: 0 80px;
+  }
+}
+
+.header-menu {
+  margin-top: 25.5px;
+}
+
+.header-menu nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header-menu nav ul li a {
+  display: block;
+  width: 100%;
+  color: #fff;
+  font-size: 1.8rem;
+  font-height: 1.83;
+  text-align: center;
+  padding-left: 31px;
+}
+
+.hamburger {
+  width: 72px;
+  height: 50px;
+  background-color: #fff;
+  position: relative;
+}
+
+.hamburger span {
+  display: block;
+  width: 50%;
+  height: 4px;
+  background-color: #4d9600;
+  position: absolute;
+  top: 23px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.hamburger span::before {
+  display: block;
+  width: 50%;
+  height: 4px;
+  background-color: #4d9600;
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: .3s;
+  transition: .3s;
+  content: '';
+  width: 100%;
+}
+
+.hamburger span::after {
+  display: block;
+  width: 50%;
+  height: 4px;
+  background-color: #4d9600;
+  position: absolute;
+  top: 12px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: .3s;
+  transition: .3s;
+  content: '';
+  width: 100%;
+}
+
+.hamburger.active span {
+  background: transparent;
+}
+
+.hamburger.active span::before {
+  -webkit-transform: translateX(-50%) translateY(12px) rotate(-45deg);
+          transform: translateX(-50%) translateY(12px) rotate(-45deg);
+}
+
+.hamburger.active span::after {
+  -webkit-transform: translateX(-50%) translateY(-12px) rotate(45deg);
+          transform: translateX(-50%) translateY(-12px) rotate(45deg);
+}
+
+.hamburger-menu {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 50px;
+  z-index: 99;
+}
+
+.hamburger-menu nav {
+  width: 100%;
+  min-width: 300px;
+}
+
+.hamburger-menu nav ul li {
+  background-color: #4d9600;
+}
+
+.hamburger-menu nav ul li:hover {
+  background-color: #000;
+}
+
+.hamburger-menu nav ul li a {
+  display: inline-block;
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 1.82;
+}
+
+.hamburger-bg.active {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+}
+
+#top {
+  background-image: url(../images/SP_FirstView-1.png);
+  background-image: -webkit-image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+  background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  #top {
+    background-image: url(../images/FirstView_01.png);
+    background-image: -webkit-image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
+    background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
+  }
+}
+
+#top p {
+  color: #fff;
+  font-size: 3rem;
+  text-align: center;
+  position: absolute;
+  top: 37.7%;
+  left: 51.1%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  line-height: 2;
+  letter-spacing: 0.3em;
+  width: 100%;
+  text-shadow: 5px 5px 5px #000;
+  z-index: 0;
+}
+
+@media screen and (min-width: 600px) {
+  #top p {
+    top: 49.7%;
+    left: 50.6%;
+    font-size: 4rem;
+    font-weight: 600;
+    line-height: 1.85;
+  }
 }
 /*# sourceMappingURL=style.css.map */
