--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -1,3 +1,194 @@
+@import '_breakpoint';
+@import '_mixin';
+
+$cGreen: #4d9600;
+
 html {
   font-family: 'YuMincho', 'Yu Mincho', serif;
+  font-size: 10px;
+}
+li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+  color:#000;
+}
+.pc {
+  display: none;
+  @include mq(lg) {
+    display: block;
+  }
+}
+.no-pc {
+  display: block;
+  @include mq(lg) {
+    display: none;
+  }
+}
+
+// header
+header {
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+  #site-title {
+    color: #fff;
+    margin-top: 12px;
+    font-size: 2rem;
+    line-height: 1.65;
+    @include mq(xl){
+      margin-top: 24px;
+    }
+  }
+}
+.header-wrapper{
+  padding-left:20px;
+  @include mq(md){
+    padding: {
+      left:5%;
+      right: 5%;
+    } 
+  }
+  @include mq(xl){
+    padding: 0 80px;
+  }
+}
+.header-menu{
+  margin-top: 25.5px;
+  nav{
+    ul{
+      display: flex;
+      li{
+        a{
+          display: block;
+          width: 100%;
+          color: #fff;
+          font: {
+            size: 1.8rem;
+            height: 1.83;
+          }
+          text-align: center;
+          padding-left:31px;
+        }
+      }
+    }
+  }
+}
+@mixin hamburger-line($value) {
+  display: block;
+  width: 50%;
+  height: 4px;
+  background-color: $cGreen;
+  position: absolute;
+  top: $value - (4/2);
+  left: 50%;
+  transform: translateX(-50%);
+  transition: .3s;
+}
+.hamburger {
+  width: 72px;
+  height: 50px;
+  background-color: #fff;
+  position: relative;
+  span {
+    @include hamburger-line(25px);
+    &::before {
+      @include hamburger-line(-10px);
+      content: '';
+      width: 100%;
+    }
+    &::after {
+      @include hamburger-line(14px);
+      content: '';
+      width: 100%;
+    }
+  }
+  &.active{
+    span{
+      background: transparent;
+      &::before{
+        transform: translateX(-50%) translateY(12px) rotate(-45deg);
+      }
+      &::after{
+        transform: translateX(-50%) translateY(-12px) rotate(45deg);
+      }
+    }
+  }
+}
+.hamburger-menu{
+  display: none;
+  position: absolute;
+  right: 0;
+  top:50px;
+  z-index: 99;
+  nav{
+    width:100%;
+    min-width:300px;
+    ul{
+      li{
+        background-color:$cGreen;
+        &:hover{
+          background-color: #000;
+        }
+        a{
+          display: inline-block;
+          width:100%;
+          padding: {
+            top:15px;
+            bottom:10px;
+            left:20px;
+          }
+          color:#fff;
+          font-weight: 600;
+          font-size: 1.8rem;
+          line-height: 1.82;
+        }
+      }
+    }
+  }
+}
+.hamburger-bg.active{
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top:0;
+}
+
+// top
+#top{
+  background-image: url(../images/SP_FirstView-1.png);
+  background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+  @include mq(lg){
+    background-image: url(../images/FirstView_01.png);
+    background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
+  }
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  p{
+    color: #fff;
+    font-size: 3rem;
+    text-align: center;
+    position: absolute;
+    top:37.7%;
+    left:51.1%;
+    transform: translateX(-50%);
+    line-height: 2;
+    letter-spacing: 0.3em;
+    width: 100%;
+    text-shadow: 5px 5px 5px #000;
+    z-index: 0;
+    @include mq(md){
+      top:49.7%;
+      left:50.6%;
+      font: {
+        size:4rem;
+        weight:600;
+      }
+      line-height: 1.85;
+    }
+  }
 }
