fix to link sns icon

--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -788,7 +788,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    img {
+    a {
       &:nth-child(2) {
         margin-left: 12px;
       }
