--- a/AnimalHospital/css/style.css
+++ b/AnimalHospital/css/style.css
@@ -1070,15 +1070,15 @@ footer .sns-icon-list {
           justify-content: center;
 }
 
-footer .sns-icon-list img:nth-child(2) {
+footer .sns-icon-list a:nth-child(2) {
   margin-left: 12px;
 }
 
-footer .sns-icon-list img:nth-child(3) {
+footer .sns-icon-list a:nth-child(3) {
   margin-left: 14.2px;
 }
 
-footer .sns-icon-list img:nth-child(4) {
+footer .sns-icon-list a:nth-child(4) {
   margin-left: 10.6px;
 }
 
