--- a/RealEstate/css/_breakpoint.scss
+++ b/RealEstate/css/_breakpoint.scss
@@ -2,5 +2,6 @@ $breakpoints: (
   'sm': 'screen and (min-width: 475px)',
   'md': 'screen and (min-width: 600px)',
   'lg': 'screen and (min-width: 768px)',
+  'll': 'screen and (min-width: 900px)',
   'xl': 'screen and (min-width: 1080px)',
 ) !default;
