--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -9,14 +9,13 @@ li {
 
 a {
   text-decoration: none;
-  color: #000;
 }
 
 .pc {
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 600px) {
   .pc {
     display: block;
   }
@@ -26,13 +25,50 @@ a {
   display: block;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 600px) {
   .no-pc {
     display: none;
   }
 }
 
+.header-nav-display {
+  display: none;
+}
+
+@media screen and (min-width: 1080px) {
+  .header-nav-display {
+    display: block;
+  }
+}
+
+.header-hamburger-display {
+  display: block;
+}
+
+@media screen and (min-width: 1080px) {
+  .header-hamburger-display {
+    display: none;
+  }
+}
+
+.font-white {
+  color: #fff;
+}
+
+.font-black {
+  color: #000;
+}
+
+.wm-vl {
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+}
+
 header {
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,7 +79,6 @@ header {
 }
 
 header #site-title {
-  color: #fff;
   margin-top: 12px;
   font-size: 2rem;
   line-height: 1.65;
@@ -59,7 +94,7 @@ header #site-title {
   padding-left: 20px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 1080px) {
   .header-wrapper {
     padding-left: 5%;
     padding-right: 5%;
@@ -85,11 +120,17 @@ header #site-title {
 .header-menu nav ul li a {
   display: block;
   width: 100%;
-  color: #fff;
   font-size: 1.8rem;
   font-height: 1.83;
   text-align: center;
   padding-left: 31px;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.header-menu nav ul li a:hover {
+  opacity: .5;
+  border-bottom: 1px solid #000;
 }
 
 .hamburger {
@@ -200,30 +241,15 @@ header #site-title {
 }
 
 #top {
-  background-image: url(../images/SP_FirstView-1.png);
-  background-image: -webkit-image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
-  background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
-  background-position: top;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
   position: relative;
 }
 
-@media screen and (min-width: 768px) {
-  #top {
-    background-image: url(../images/FirstView_01.png);
-    background-image: -webkit-image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
-    background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
-  }
-}
-
-#top p {
+.top-message {
   color: #fff;
   font-size: 3rem;
   text-align: center;
   position: absolute;
-  top: 37.7%;
+  top: 35%;
   left: 51.1%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -235,12 +261,103 @@ header #site-title {
 }
 
 @media screen and (min-width: 600px) {
-  #top p {
+  .top-message {
     top: 49.7%;
     left: 50.6%;
     font-size: 4rem;
     font-weight: 600;
     line-height: 1.85;
   }
+}
+
+.slider div {
+  background-position: top;
+  background-size: cover;
+  height: 601px;
+}
+
+.slider div .fv01 {
+  background-image: url(../images/SP_FirstView-1.png);
+  background-image: -webkit-image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+  background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+}
+
+@media screen and (min-width: 600px) {
+  .slider div .fv01 {
+    background-image: url(../images/FirstView_01.png);
+    background-image: -webkit-image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
+    background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
+  }
+}
+
+.slider div .fv02 {
+  background-image: url(../images/SP_FirstView-2.png);
+  background-image: -webkit-image-set(url(../images/SP_FirstView-2.png) 1x, url(../images/SP_FirstView-2@2x.png) 2x);
+  background-image: image-set(url(../images/SP_FirstView-2.png) 1x, url(../images/SP_FirstView-2@2x.png) 2x);
+}
+
+@media screen and (min-width: 600px) {
+  .slider div .fv02 {
+    background-image: url(../images/FirstView02.png);
+    background-image: -webkit-image-set(url(../images/FirstView02.png) 1x, url(../images/FirstView02@2x.png) 2x);
+    background-image: image-set(url(../images/FirstView02.png) 1x, url(../images/FirstView02@2x.png) 2x);
+  }
+}
+
+.slider div .fv03 {
+  background-image: url(../images/SP_FirstView-3.png);
+  background-image: -webkit-image-set(url(../images/SP_FirstView-3.png) 1x, url(../images/SP_FirstView-3@2x.png) 2x);
+  background-image: image-set(url(../images/SP_FirstView-3.png) 1x, url(../images/SP_FirstView-3@2x.png) 2x);
+}
+
+@media screen and (min-width: 600px) {
+  .slider div .fv03 {
+    background-image: url(../images/FirstView-3.png);
+    background-image: -webkit-image-set(url(../images/FirstView03.png) 1x, url(../images/FirstView03@2x.png) 2x);
+    background-image: image-set(url(../images/FirstView03.png) 1x, url(../images/FirstView03@2x.png) 2x);
+  }
+}
+
+#about {
+  position: relative;
+  background-image: url(../images/SP_About.png);
+  background-image: -webkit-image-set(url(../images/SP_About.png) 1x, url(../images/SP_About@2x.png) 2x);
+  background-image: image-set(url(../images/SP_About.png) 1x, url(../images/SP_About@2x.png) 2x);
+  background-size: cover;
+  background-position: right;
+  width: 100%;
+  height: 584px;
+}
+
+@media screen and (min-width: 600px) {
+  #about {
+    background-image: url(../images/About.png);
+    background-image: -webkit-image-set(url(../images/About.png) 1x, url(../images/About@2x.png) 2x);
+    background-image: image-set(url(../images/About.png) 1x, url(../images/About@2x.png) 2x);
+  }
+}
+
+.about-heading {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 2.5rem;
+  font-weight: 200;
+  line-height: 1.2;
+  letter-spacing: 0.2em;
+}
+
+.about-message {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  font-size: 1.8rem;
+  font-weight: 200;
+  line-height: 1.45;
+  letter-spacing: 0.1em;
 }
 /*# sourceMappingURL=style.css.map */
