--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -12,28 +12,49 @@ li{
 }
 a{
   text-decoration: none;
-  color:#000;
 }
 .pc {
   display: none;
-  @include mq(lg) {
+  @include mq(md) {
     display: block;
   }
 }
 .no-pc {
   display: block;
-  @include mq(lg) {
+  @include mq(md) {
     display: none;
   }
 }
-
+.header-nav-display{
+  display: none;
+  @include mq(xl){
+    display: block;
+  }
+}
+.header-hamburger-display{
+  display:block;
+  @include mq(xl){
+    display: none;
+  }
+}
+.font-white{
+  color: #fff;
+}
+.font-black{
+  color: #000;
+}
+.wm-vl{
+  writing-mode: vertical-rl;
+}
 // header
 header {
+  position:fixed;
+  top:0;
+  width:100%;
   display: flex;
   justify-content: space-between;
   z-index: 1;
   #site-title {
-    color: #fff;
     margin-top: 12px;
     font-size: 2rem;
     line-height: 1.65;
@@ -44,7 +65,7 @@ header {
 }
 .header-wrapper{
   padding-left:20px;
-  @include mq(md){
+  @include mq(xl){
     padding: {
       left:5%;
       right: 5%;
@@ -63,13 +84,17 @@ header {
         a{
           display: block;
           width: 100%;
-          color: #fff;
           font: {
             size: 1.8rem;
             height: 1.83;
           }
           text-align: center;
           padding-left:31px;
+          transition: .3s;
+          &:hover{
+            opacity: .5;
+            border-bottom: 1px solid #000;
+          }
         }
       }
     }
@@ -157,38 +182,98 @@ header {
 
 // top
 #top{
-  background-image: url(../images/SP_FirstView-1.png);
-  background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
-  @include mq(lg){
-    background-image: url(../images/FirstView_01.png);
-    background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
-  }
-  background-position: top;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
   position: relative;
-  p{
-    color: #fff;
-    font-size: 3rem;
-    text-align: center;
-    position: absolute;
-    top:37.7%;
-    left:51.1%;
-    transform: translateX(-50%);
-    line-height: 2;
-    letter-spacing: 0.3em;
-    width: 100%;
-    text-shadow: 5px 5px 5px #000;
-    z-index: 0;
-    @include mq(md){
-      top:49.7%;
-      left:50.6%;
-      font: {
-        size:4rem;
-        weight:600;
+}
+.top-message{
+  color: #fff;
+  font-size: 3rem;
+  text-align: center;
+  position: absolute;
+  top:35%;
+  left:51.1%;
+  transform: translateX(-50%);
+  line-height: 2;
+  letter-spacing: 0.3em;
+  width: 100%;
+  text-shadow: 5px 5px 5px #000;
+  z-index: 0;
+  @include mq(md){
+    top:49.7%;
+    left:50.6%;
+    font: {
+      size:4rem;
+      weight:600;
+    }
+    line-height: 1.85;
+  }
+}
+.slider{
+  div
+  {
+    background-position: top;
+    background-size: cover;
+    height: 601px;
+    .fv01{
+      background-image: url(../images/SP_FirstView-1.png);
+      background-image: image-set(url(../images/SP_FirstView-1.png) 1x, url(../images/SP_FirstView-1@2x.png) 2x);
+      @include mq(md){
+        background-image: url(../images/FirstView_01.png);
+        background-image: image-set(url(../images/FirstView_01.png) 1x, url(../images/FirstView_01@2x.png) 2x);
       }
-      line-height: 1.85;
+    }
+    .fv02{
+      background-image: url(../images/SP_FirstView-2.png);
+      background-image: image-set(url(../images/SP_FirstView-2.png) 1x, url(../images/SP_FirstView-2@2x.png) 2x);
+      @include mq(md){
+        background-image: url(../images/FirstView02.png);
+        background-image: image-set(url(../images/FirstView02.png) 1x, url(../images/FirstView02@2x.png) 2x);
+      }
+    }
+    .fv03{
+      background-image: url(../images/SP_FirstView-3.png);
+      background-image: image-set(url(../images/SP_FirstView-3.png) 1x, url(../images/SP_FirstView-3@2x.png) 2x);
+      @include mq(md){
+        background-image: url(../images/FirstView-3.png);
+        background-image: image-set(url(../images/FirstView03.png) 1x, url(../images/FirstView03@2x.png) 2x);
+      }
     }
   }
+}
+// about
+#about{
+  position: relative;
+  background-image: url(../images/SP_About.png);
+  background-image: image-set(url(../images/SP_About.png) 1x, url(../images/SP_About@2x.png) 2x);
+  @include mq(md){
+    background-image: url(../images/About.png);
+    background-image: image-set(url(../images/About.png) 1x, url(../images/About@2x.png) 2x);
+  }
+  background: {
+    size: cover;
+    position: right;
+  }
+  width: 100%;
+  height: 584px;
+}
+.about-heading{
+  position: absolute;
+  top:50px;
+  left:50%;
+  transform: translateX(-50%);
+  font: {
+    size: 2.5rem;
+    weight: 200;
+  }
+  line-height: 1.2;
+  letter-spacing: 0.2em;
+}
+.about-message{
+  position: absolute;
+  bottom:50px;
+  left:50%;
+  transform: translateX(-50%);
+  font-size: 1.8rem;
+  font-weight: 200;
+  line-height: 1.45;
+  letter-spacing: 0.1em;
 }
