--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -98,9 +98,18 @@
       transform: translateX(-50%) translateY(-12px) rotate(45deg);
     }
   }
+  &:hover{
+    cursor: pointer;
+  }
 }
 // header
 header {
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  background-color: #fff;
+  z-index:1;
   .header-area {
     height: 50px;
     display: flex;
@@ -150,25 +159,37 @@ header {
     }
   }
   .nav-column-list {
-    background-color: rgba(6, 184, 146, 0.1);
+    position: fixed;
+    top:50px;
+    background-color: rgba(13,150,160,.7);
+    width:100vw;
+    height: 100vh;
     z-index: 999;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
     li {
-      &:not(:last-of-type) {
-        border-bottom: 3px solid #fff;
-      }
       a {
         display: block;
+        width:100%;
         font-size: 2rem;
+        line-height: 3;
         text-align: center;
-        color: #0d96a0;
+        color: #fff;
+        font-weight: 700;
         &:focus {
           cursor: pointer;
+        }
+        &:hover{
+          background-color: #fff;
+          color:#0d96a0;
         }
       }
     }
   }
 }
 #top {
+  margin-top: 50px;
   background-image: url(../images/top_sp.png);
   background-image: image-set(
     url(../images/top_sp.png) 1x,
